# WSU-NOvA-Vertexer

./: .gitignore  GITHUB.md  HACKING.md  README.md  pyproject.toml  release-notes  setup_env.sh
.github/workflows/: pylint.yaml
Far-Detector/analysis/: plot_1d_vertex_resolutions.py  plot_2d_vertex_resolutions.py  plot_cvnmap_predictions.ipynb
Far-Detector/initial-checks/: validate_preprocessed_h5.ipynb
Far-Detector/model-prediction/: model_predict_coordinates_xyz.py
Far-Detector/preprocess/: preprocess_h5_file_10k_events.py
Far-Detector/separate-coordinate-workflow/: y_vertex_training.py  z_vertex_training.py
Far-Detector/training/: create_slurm_script_training.sh  xyz_vertex_training.py
Prod5-ND/: data_pre_processor_test_v7.py  data_pre_processor_train_v7.py  requirements.txt
Prod5-ND/analysis/: x-model-pred-plotter-abdul.ipynb  y-model-pred-plotter-abdul.ipynb  z-model-pred-plotter-abdul.ipynb
Prod5-ND/older-previous-generation-work/: PDG_Analysis_Ver1.ipynb  PDG_Analysis_Ver_2.ipynb  README.md  novawork.ipynb  preprocessor_execute.ipynb  x-model-pred-plotter-momin.ipynb  x-model_prediction-and-csv_file_saving.ipynb  x-pv-finder-model-regcnn-wsu.ipynb  x-pv-finder-model-regcnn.ipynb  y-model-pred-plotter.ipynb  y-pv-finder-model-regcnn.ipynb  y-pv-finder1-model-regcnn.ipynb  z-model-pred-plotter-momin.ipynb  (+1 more)
Prod5.1-FD/: .README.md.~undo-tree~  README.md  create_slurm_script_preprocess.sh  create_slurm_script_training.sh  preprocess_h5_file.py  validate_preprocessed_h5.ipynb
utils/: data_processing.py  iomanager.py  model.py  plot.py
(+31 files in other folders)
